fix wordbreak in chrome on group profile, closes  #266

--- a/app/assets/stylesheets/custom/_groups_people.scss
+++ b/app/assets/stylesheets/custom/_groups_people.scss
@@ -8,6 +8,9 @@
   h1 {
     margin-top: 0;
   }
+  p {
+    word-break: break-word;
+  }
 }
 .group-info {
   img {
